--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="section-content">
       <center>
         <h2>Resume</h2>
-        <a href="file:///E:/college/BENIYAREBECCA.pdf" target="_blank" class="download-button">Download CV</a>
+        <a href="https://drive.google.com/file/d/10vhDW0mDpTMPdDJ4eFJWsv5UQwI322ri/view?usp=drive_link" target="_blank" class="download-button">Download CV</a>
       </center>
     </div>
   </section>
